# DouyinLM-Show

./: README.md  package-lock.json  package.json  render.yaml  tsconfig.json
app/: MotionObserver.tsx  ProductDemo.tsx  globals.css  layout.tsx  page.tsx
live/: .dockerignore  Dockerfile  Dockerfile.render
live/apps/server/: alembic.ini  pyproject.toml
live/apps/server/alembic/: env.py
live/apps/server/alembic/versions/: 0001_gate_t0.py  0002_gate_t1.py  0003_gate_t2_t3.py  0004_artifact_conflict_details.py
live/apps/server/src/douyinlm/: __init__.py  __main__.py  audit_demo_evidence.py  main.py  settings.py  sync_demo_metadata.py  verify_ai_pipeline.py  verify_artifact_compiler.py
live/apps/server/src/douyinlm/api/: routes.py
live/apps/server/src/douyinlm/domain/: __init__.py  schemas.py
live/apps/server/src/douyinlm/jobs/: __init__.py  runner.py
live/apps/server/src/douyinlm/providers/: __init__.py  ark.py  asr.py  base.py  compiler.py  errors.py  ffmpeg.py
live/apps/server/src/douyinlm/repositories/: database.py  jobs.py  models.py
live/apps/server/src/douyinlm/services/: analysis_jobs.py  collection_artifact_compiler.py  importer.py  understanding_data.py
live/apps/server/src/douyinlm/workflows/: __init__.py  video_pipeline.py
live/apps/web/: index.html  package-lock.json  package.json  vite.config.ts
live/apps/web/scripts/: audit-evaluation.mjs  audit-evaluation.node-test.mjs  audit-release.mjs
live/apps/web/src/: App.tsx  api.ts  main.tsx  styles.css  vite-env.d.ts
live/scripts/: render-entrypoint.sh
tests/: rendered-html.test.mjs
(+39 files in other folders)
